@@ -15,7 +15,7 @@ package pt.up.fe.specs.util;
 
 import java.io.IOException;
 import java.io.PrintStream;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Supplier;
 import java.util.logging.FileHandler;
@@ -44,30 +44,14 @@ public class SpecsLogs {
     private final static ThreadLocal<EnumLogger<SpecsLoggerTag>> SPECS_LOGGER = ThreadLocal
             .withInitial(() -> EnumLogger.newInstance(SpecsLoggerTag.class).addToIgnoreList(SpecsLogs.class));
 
-    // private final static String NEWLINE = System.getProperty("line.separator");
-
     private final static String SYSTEM_OUT_LOGGER = "System.out";
     private final static String SYSTEM_ERR_LOGGER = "System.err";
 
-    // private final static String SEVERE_TAG = "App-Severe";
-    // private final static String WARNING_TAG = "App-Warn";
     public final static String INFO_TAG = "App-Info";
-    // private final static String LIB_TAG = "App-Lib";
-
-    // private final static String LOGGING_TAG = "CurrentApp";
-    // public final static String LOGGING_ANDROID_TAG = "currentApp";
-    // private final static String LIB_LOGGING_TAG = "[LIB]";
-    // Preserving a reference to original stdout/stderr streams,
-    // in case they change.
-    // private final static PrintStream stdout = System.out;
-    // private final static PrintStream stderr = System.err;
-
-    // private static boolean printStackTrace = true;
 
     /**
      * Helper method to get the root Logger.
      *
-     * @return
      */
     public static Logger getRootLogger() {
         return Logger.getLogger("");
@@ -80,57 +64,15 @@ public class SpecsLogs {
      */
     public static Logger getLogger() {
         return SPECS_LOGGER.get().getLogger(null);
-        // return Logger.getLogger(SpecsLogs.LOGGING_TAG);
     }
 
     public static EnumLogger<SpecsLoggerTag> getSpecsLogger() {
         return SPECS_LOGGER.get();
-        // return Logger.getLogger(SpecsLogs.LOGGING_TAG);
     }
 
     /**
-     * Helper method to automatically get the Logger correspondent to the class which calls this method.
-     *
-     * <p>
-     * Thes method uses the "heavy" StackTrace to determine what object called it. This should only be used for logging
-     * "warnings" which are not called often, or in situation such as constructors, were we do not want to leak the
-     * object reference before it exists.
-     *
-     * @param object
-     * @return logger specific to the given object
-     */
-
-    /*
-    public static Logger getLoggerDebug() {
-        // StackTraceElement stackElement = ProcessUtils.getCallerMethod();
-        // If called directly, use index 4
-        return getLoggerDebug(5);
-        // StackTraceElement stackElement = ProcessUtils.getCallerMethod(4);
-        // return Logger.getLogger(stackElement.getClassName());
-    }
-    */
-
-    /**
-     * Helper method to automatically get the Logger correspondent to the class which calls this method.
-     *
-     * <p>
-     * Thes method uses the "heavy" StackTrace to determine what object called it. This should only be used for logging
-     * "warnings" which are not called often, or in situation such as constructors, were we do not want to leak the
-     * object reference before it exists.
-     *
-     * @param callerMethodIndex
-     *            the index indicating the depth of method calling. This method introduces 3 calls (index 0-2), index 3
-     *            is this method, index 4 is the caller index
-     * @return logger specific to the given object
-     */
-    /*
-    public static Logger getLoggerDebug(int callerMethodIndex) {
-        final StackTraceElement stackElement = SpecsSystem.getCallerMethod(callerMethodIndex);
-        return Logger.getLogger(stackElement.toString());
-    }
-    */
-    /**
-     * Redirects the System.out stream to the logger with name defined by LOGGING_TAG.
+     * Redirects the System.out stream to the logger with name defined by
+     * LOGGING_TAG.
      *
      * <p>
      * Anything written to System.out is recorded as a log at info level.
@@ -150,7 +92,8 @@ public class SpecsLogs {
     }
 
     /**
-     * Redirects the System.err stream to the logger with name defined by LOGGING_TAG.
+     * Redirects the System.err stream to the logger with name defined by
+     * LOGGING_TAG.
      *
      * <p>
      * Anything written to System.err is recorded as a log at warning level.
@@ -173,7 +116,7 @@ public class SpecsLogs {
      * Removes current handlers and adds the given Handlers to the root logger.
      *
      * @param handlers
-     *            the Handlers we want to set as the root Handlers.
+     *                 the Handlers we want to set as the root Handlers.
      */
     public static void setRootHandlers(Handler[] handlers) {
         final Logger logger = getRootLogger();
@@ -193,10 +136,9 @@ public class SpecsLogs {
     /**
      * Helper method.
      *
-     * @param handler
      */
     public static void addHandler(Handler handler) {
-        addHandlers(Arrays.asList(handler));
+        addHandlers(List.of(handler));
     }
 
     public static void removeHandler(Handler handler) {
@@ -205,7 +147,7 @@ public class SpecsLogs {
         final Handler[] handlersTemp = logger.getHandlers();
 
         // Add handlers to a list, except for the given handler
-        final List<Handler> handlerList = SpecsFactory.newArrayList();
+        final List<Handler> handlerList = new ArrayList<>();
         for (Handler element : handlersTemp) {
 
             if (element == handler) {
@@ -219,17 +161,12 @@ public class SpecsLogs {
         setRootHandlers(handlerList.toArray(new Handler[handlerList.size()]));
     }
 
-    public static void setHandlers(List<Handler> handlers) {
-
-    }
-
     /**
      * Removes current handlers and adds the given Handlers to the root logger.
      *
      * @param handlers
-     *            the Handlers we want to set as the root Handlers.
+     *                 the Handlers we want to set as the root Handlers.
      */
-    // public static void addHandler(Handler handler) {
     public static void addHandlers(List<Handler> handlers) {
         // Get all handlers
         final Logger logger = getRootLogger();
@@ -238,9 +175,7 @@ public class SpecsLogs {
         final Handler[] newHandlers = new Handler[handlersTemp.length + handlers.size()];
 
         // Add previous handlres
-        for (int i = 0; i < handlersTemp.length; i++) {
-            newHandlers[i] = handlersTemp[i];
-        }
+        System.arraycopy(handlersTemp, 0, newHandlers, 0, handlersTemp.length);
 
         // Add new handlers
         for (int i = 0; i < handlers.size(); i++) {
@@ -256,50 +191,12 @@ public class SpecsLogs {
      *
      * @return a Console Handler formatted by ConsoleFormatter.
      */
-    /*
-    public static Handler buildConsoleHandler() {
-    
-    StreamHandler cHandler = CustomConsoleHandler.newStderr();
-    //ConsoleHandler cHandler = new ConsoleHandler();
-    cHandler.setFormatter(new ConsoleFormatter());
-    
-    /*
-    cHandler.setFilter(new Filter() {
-    
-        @Override
-        public boolean isLoggable(LogRecord record) {
-    	if(record.getLevel().intValue() > 700) {
-    	    return false;
-    	}
-    
-    	return true;
-        }
-    });
-     */
-    /*
-    cHandler.setLevel(Level.ALL);
-    
-    return cHandler;
-    }
-     */
-
-    /**
-     * builds a Console Handler which uses as formatter, ConsoleFormatter.
-     *
-     * @return a Console Handler formatted by ConsoleFormatter.
-     */
     public static Handler buildStdOutHandler() {
 
         final StreamHandler cHandler = CustomConsoleHandler.newStdout();
         cHandler.setFormatter(new ConsoleFormatter());
 
-        cHandler.setFilter(record -> {
-
-            if (record.getLevel().intValue() > Level.INFO.intValue()) {
-                return false;
-            }
-            return true;
-        });
+        cHandler.setFilter(record -> record.getLevel().intValue() <= Level.INFO.intValue());
 
         cHandler.setLevel(Level.ALL);
 
@@ -316,13 +213,7 @@ public class SpecsLogs {
         final StreamHandler cHandler = CustomConsoleHandler.newStderr();
         cHandler.setFormatter(new ConsoleFormatter());
 
-        cHandler.setFilter(record -> {
-            if (record.getLevel().intValue() <= Level.INFO.intValue()) {
-                return false;
-            }
-
-            return true;
-        });
+        cHandler.setFilter(record -> record.getLevel().intValue() > Level.INFO.intValue());
 
         cHandler.setLevel(Level.ALL);
 
@@ -339,27 +230,16 @@ public class SpecsLogs {
         FileHandler fileHandler = null;
         try {
             fileHandler = new FileHandler(logFilename, false);
-        } catch (final SecurityException e) {
-            // TODO Auto-generated catch block
-            e.printStackTrace();
-        } catch (final IOException e) {
-            // TODO Auto-generated catch block
+        } catch (final SecurityException | IOException e) {
             e.printStackTrace();
         }
 
         if (fileHandler == null) {
             return null;
         }
-        // StreamHandler cHandler = CustomConsoleHandler.newStderr();
         fileHandler.setFormatter(new ConsoleFormatter());
 
-        fileHandler.setFilter(record -> {
-            if (record.getLevel().intValue() <= Level.INFO.intValue()) {
-                return false;
-            }
-
-            return true;
-        });
+        fileHandler.setFilter(record -> record.getLevel().intValue() > Level.INFO.intValue());
 
         fileHandler.setLevel(Level.ALL);
 
@@ -367,7 +247,8 @@ public class SpecsLogs {
     }
 
     /**
-     * Automatically setups the root logger for output to the console. Redirects System.out and System.err to the logger
+     * Automatically setups the root logger for output to the console. Redirects
+     * System.out and System.err to the logger
      * as well.
      */
     public static void setupConsoleOnly() {
@@ -402,7 +283,6 @@ public class SpecsLogs {
     /**
      * Sets the level of the root Logger.
      *
-     * @param level
      */
     public static void setLevel(Level level) {
         SpecsLogs.getRootLogger().setLevel(level);
@@ -412,10 +292,10 @@ public class SpecsLogs {
      * Writes a message to the logger with name defined by LOGGING_TAG.
      *
      * <p>
-     * Messages written with this method are recorded as a log at warning level. Use this level to show a message for
-     * cases that are supposed to never happen if the code is well used.
+     * Messages written with this method are recorded as a log at warning level. Use
+     * this level to show a message for cases that are supposed to never happen if
+     * the code is well used.
      *
-     * @param msg
      */
     public static void warn(String msg) {
         SPECS_LOGGER.get().warn(msg);
@@ -423,47 +303,14 @@ public class SpecsLogs {
 
     /**
      * @deprecated use warn() instead
-     * @param msg
      */
     @Deprecated
     public static void msgWarn(String msg) {
         warn(msg);
     }
 
-    /*
-    public static void msgWarn(Logger logger, String msg) {
-    
-        final List<StackTraceElement> elements = Arrays.asList(Thread.currentThread().getStackTrace());
-        final int startIndex = 2;
-    
-        msgWarn(msg, elements, startIndex, true, logger);
-    }
-    */
-
-    /*
-    private static void msgWarn(String msg, List<StackTraceElement> elements, int startIndex,
-            boolean appendCallingClass, Logger logger) {
-    
-        msg = "[WARNING]: " + msg;
-        msg = parseMessage(msg);
-        msg = buildErrorMessage(msg, elements.subList(startIndex, elements.size()));
-    
-        if (appendCallingClass) {
-            logger = logger == null ? getLoggerDebug() : logger;
-            logger.warning(msg);
-            // getLoggerDebug().warning(msg);
-        } else {
-            logger = logger == null ? getLogger() : logger;
-            logger.warning(msg);
-            // getLogger().warning(msg);
-        }
-    }
-    */
-
     /**
      * @deprecated use warn() instead
-     * @param msg
-     * @param ourCause
      */
     @Deprecated
     public static void msgWarn(String msg, Throwable ourCause) {
@@ -482,10 +329,6 @@ public class SpecsLogs {
                 .getLogCallLocation(Thread.currentThread().getStackTrace());
         String catchLocation = !catchLocationTrace.isEmpty() ? SpecsLogging.getSourceCode(catchLocationTrace.get(0))
                 : "<Could not get catch location trace>";
-        // String msgSource = "\n\nCatch location:" + catchLocation;
-        // final List<StackTraceElement> currentElements = Arrays.asList(Thread.currentThread().getStackTrace());
-        // final StackTraceElement currentElement = currentElements.get(2);
-        // final String msgSource = "\n\n[Catch]:\n" + currentElement;
 
         String causeString = ourCause.getMessage();
         if (causeString == null) {
@@ -494,58 +337,11 @@ public class SpecsLogs {
 
         causeString = "[" + ourCause.getClass().getSimpleName() + "] " + causeString;
 
-        // final String causeMsg = causeString + msgSource;
-
-        // msg = msg + "\nCause: [" + ourCause.getClass().getSimpleName() + "] " + ourCause.getMessage() + msgSource;
         msg = msg + catchLocation + "\n\nException message: " + causeString;
 
         SPECS_LOGGER.get().log(Level.WARNING, null, msg, LogSourceInfo.getLogSourceInfo(Level.WARNING),
                 ourCause.getStackTrace());
-
-        // final List<StackTraceElement> elements = Arrays.asList(ourCause.getStackTrace());
-        // final int startIndex = 0;
-        //
-        // msgWarn(msg, elements, startIndex, false, null);
     }
-
-    /*
-    public static void msgWarn(Throwable cause) {
-    
-        msgWarn("Exception", cause);
-        // final List<StackTraceElement> elements = Arrays.asList(cause.getStackTrace());
-        // final int startIndex = 0;
-        //
-        // final String msg = cause.getClass().getName() + ": " + cause.getMessage();
-        //
-        // msgWarn(msg, elements, startIndex, false, null);
-    
-    }
-    */
-
-    /*
-    public static String buildErrorMessage(String originalMsg, Collection<StackTraceElement> elements) {
-    
-        final StringBuilder builder = new StringBuilder();
-        builder.append(originalMsg);
-    
-        // Append the stack trace to the msg
-        if (SpecsLogs.printStackTrace) {
-            builder.append("\n\nStack Trace:");
-            builder.append("\n--------------");
-    
-            for (final StackTraceElement element : elements) {
-                builder.append("\n");
-                builder.append(element);
-            }
-    
-            builder.append("\n--------------");
-            builder.append("\n");
-    
-        }
-    
-        return builder.toString();
-    }
-    */
 
     /**
      * Info-level message.
@@ -553,7 +349,6 @@ public class SpecsLogs {
      * <p>
      * Use this level to show messages to the user of a program.
      *
-     * @param msg
      */
     public static void msgInfo(String msg) {
         info(msg);
@@ -565,39 +360,15 @@ public class SpecsLogs {
     }
 
     /**
-     * Info-level message.
-     * 
-     * <p>
-     * Accepting a Logger, since that should be the common case, keeping a reference to a Logger so that it does not get
-     * garbage collected.
-     * 
-     * @param logger
-     * @param msg
-     */
-    // public static void msgInfo(Logger logger, String msg) {
-    // msg = parseMessage(msg);
-    //
-    // // if(globalLevel) {logger.setLevel(globalLevel);}
-    // logger.info(msg);
-    //
-    // }
-
-    /**
      * Lib-level message.
      *
      * <p>
-     * This is a logging level between INFO and CONFIG, to be used by libraries to log execution information.
+     * This is a logging level between INFO and CONFIG, to be used by libraries to
+     * log execution information.
      *
-     * @param msg
      */
     public static void msgLib(String msg) {
         SPECS_LOGGER.get().log(LogLevel.LIB, msg);
-        // msg = parseMessage(msg);
-        // msgLib does not need support for printing the stack-trace, since it is to be used
-        // to log information that does not represent programming errors.
-        // Although it can be used to log user input errors, they are not to be resolved by looking
-        // at the source code, hence not using support for stack-trace.
-        // Logger.getLogger(SpecsLogs.LIB_TAG).log(LogLevel.LIB, msg);
     }
 
     /**
@@ -606,44 +377,22 @@ public class SpecsLogs {
      * <p>
      * Messages written with this method are recorded as a log at severe level.
      *
-     * @param msg
      */
     public static void msgSevere(String msg) {
         SPECS_LOGGER.get().log(Level.SEVERE, msg);
-        // msg = parseMessage(msg);
-        //
-        // getLoggerDebug().severe(msg);
     }
-
-    /**
-     * Adds a newline to the end of the message, if it does not have one.
-     *
-     * @param msg
-     * @return
-     */
-    /*
-    private static String parseMessage(String msg) {
-        if (msg.isEmpty()) {
-            return msg;
-        }
-        // return msg;
-        // return String.format(msg+"%n");
-        return msg + SpecsLogs.NEWLINE;
-    }
-    */
 
     /**
      * Enables/disables printing of the stack trace for Warning level.
-     * 
+     *
      * <p>
-     * This method is for compatibility with previous code. Please use LogSourceInfo.setLogSourceInfo instead.
-     * 
-     * @param bool
+     * This method is for compatibility with previous code. Please use
+     * LogSourceInfo.setLogSourceInfo instead.
+     *
      */
     public static void setPrintStackTrace(boolean bool) {
         LogSourceInfo sourceInfo = bool ? LogSourceInfo.STACK_TRACE : LogSourceInfo.NONE;
         LogSourceInfo.setLogSourceInfo(Level.WARNING, sourceInfo);
-        // SpecsLogs.printStackTrace = bool;
     }
 
     public static boolean isSystemPrint(String loggerName) {
@@ -651,17 +400,11 @@ public class SpecsLogs {
             return true;
         }
 
-        if (SpecsLogs.SYSTEM_ERR_LOGGER.equals(loggerName)) {
-            return true;
-        }
-
-        return false;
+        return SpecsLogs.SYSTEM_ERR_LOGGER.equals(loggerName);
     }
 
-    // public static void addLogFile(File file) {
     public static void addLog(PrintStream stream) {
         // Create file handler
-        // SimpleFileHandler handler = SimpleFileHandler.newInstance(file);
         final SimpleFileHandler handler = new SimpleFileHandler(stream);
 
         // Set formatter
@@ -675,36 +418,25 @@ public class SpecsLogs {
         // To avoid resolving the string unnecessarily
         if (SpecsSystem.isDebug()) {
             SPECS_LOGGER.get().debug(string.get());
-            // Prefix
-            // String message = "[DEBUG] " + string.get();
-            // msgInfo(message);
-            // debug(string.get());
         }
     }
 
     /**
-     * If this is not a pure string literal, should always prefer overload that receives a lambda, to avoid doing the
+     * If this is not a pure string literal, should always prefer overload that
+     * receives a lambda, to avoid doing the
      * string computation when debug is not enabled.
-     * 
-     * @param string
+     *
      */
     public static void debug(String string) {
         debug(() -> string);
-        // if (SpecsSystem.isDebug()) {
-        // // Prefix
-        // string = "[DEBUG] " + string;
-        // msgInfo(string);
-        // }
     }
 
     /**
      * When a certain case has not been yet tested and it can appear on the field.
-     * 
-     * @param untestedAction
+     *
      */
     public static void untested(String untestedAction) {
         SpecsLogs.warn(
                 "Untested:" + untestedAction + ". Please contact the developers in order to add this case as a test.");
     }
-
 }
